Finished most issues, struggeling with spacing + IMG Overlay needs to be done.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,7 @@
 
 html {
     height: 100%;
-    font-size: 18px;
+    // font-size: 18px;
     font-family: 'Outfit', 'sans-serif';
     display: flex;
     justify-content: center;
@@ -18,7 +18,8 @@ html {
 
 h1 {
     color: $white;
-    font-size: inherit;
+    font-size: 18px;
+    margin-top: 20px;
 }
 
 a {
@@ -38,34 +39,56 @@ a {
     padding: 1.5em;
     margin: 0 2em;
     box-shadow: 0 1em 10px 1em rgba(0, 0, 0, 0.08), 0 1em 10px 3em rgba(0, 0, 0, 0.03);
-
+    // font-size: 18px;
     .card-img {
-        border-radius: 1em;
+        border-radius: 0.5em;
         width: 100%;
+        position: relative;
     }
 
     .card-text {
-        margin: 20px 0 0 0;  
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 1.5em;  
      }
 
     .card-tradedata {
         display: flex;
         justify-content: space-between;
-    
+        margin: 1.6rem 0 0;
+        
+        .card-time-left {
+            display: flex;
+            align-items: center;
+            font-size: 0.9rem;
+
+            img {
+                margin-right: 5px;
+            }
+        }
+        
         .card-eth {
+            @extend .card-time-left;
             color: $cyan;
         }
-        // .card-time-left {
-
-        // }
+        
     }
 
     .card-created {
-    
+        display: flex;
+        align-items: center;
+        border-top: 1px solid $line-bg;
+        font-size: 0.8em;
+        letter-spacing: 0.05em;
+        margin: 1rem 0 0 0;
+        padding: 1rem 0 0.5rem;
         
-        // .card-avatar {
-            
-        // }
+        .card-avatar {
+            width: 30px;
+            border: 1px solid $white;
+            border-radius: 50%;
+            margin-right: 1rem;    
+        }
 
         .card-author-name {
             color: $white;
